@@ -8,7 +8,8 @@ test_BcfFile_openclose <- function()
     open(bf)
     checkTrue(isOpen(bf))
     checkIdentical(.normalizePath(fl), path(bf))
-    checkIdentical(character(0), index(bf))
+    checkIdentical(character(0), index(bf, asNA=FALSE))
+    checkIdentical(NA_character_, index(bf))
     close(bf)
     checkTrue(!isOpen(bf))
     checkException(close(bf), silent=TRUE)
